--- a/Extract_daily_statistics_youtube/youtube_stats.ipynb
+++ b/Extract_daily_statistics_youtube/youtube_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,31 +30,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from googleapiclient.discovery import  build"
+    "from googleapiclient.discovery import build"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = ConfigParser()\n",
     "config.read('config.cfg')\n",
     "\n",
-    "my_key = config['secrets']['api_key']\n",
+    "API_KEY = config['secrets']['api_key']\n",
     "CHANNEL_ID = \"UC_x5XG1OV2P6uZZ5FSM9Ttw\"\n",
     "\n",
-    "youtube = build(\"youtube\", \"v3\", developerKey=my_key)"
+    "youtube = build(\"youtube\", \"v3\", developerKey=API_KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -93,13 +93,451 @@
        "    'videoCount': '5959'}}]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Created_at': '23-12-26',\n",
+       " 'Total_Views': 237164420,\n",
+       " 'Subscribers': 2330000,\n",
+       " 'Video_count': 5959}"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "channel_stats = response[\"items\"][0][\"statistics\"]\n",
+    "\n",
+    "date = pd.to_datetime(\"today\").strftime(\"%y-%m-%d\")\n",
+    "\n",
+    "data_channel = {\n",
+    "    \"Created_at\": date,\n",
+    "    \"Total_Views\": int(float(channel_stats[\"viewCount\"])),\n",
+    "    \"Subscribers\": int(float(channel_stats[\"subscriberCount\"])),\n",
+    "    \"Video_count\": int(float(channel_stats[\"videoCount\"]))\n",
+    "}\n",
+    "\n",
+    "data_channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2330000"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_channel[\"Subscribers\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_stats(api_key, channel_id):\n",
+    "    youtube = build(\"youtube\", \"v3\", developerKey=api_key)\n",
+    "    request = youtube.channels().list(\n",
+    "        part=\"statistics\",\n",
+    "        id=channel_id\n",
+    "    )\n",
+    "    response = request.execute()\n",
+    "    \n",
+    "    channel_stats = response[\"items\"][0][\"statistics\"]\n",
+    "    date = pd.to_datetime(\"today\").strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "    data_channel = {\n",
+    "        \"Created_at\": date,\n",
+    "        \"Total_Views\": int(float(channel_stats[\"viewCount\"])),\n",
+    "        \"Subscribers\": int(float(channel_stats[\"subscriberCount\"])),\n",
+    "        \"Video_count\": int(float(channel_stats[\"videoCount\"]))\n",
+    "    }\n",
+    "\n",
+    "    return data_channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Created_at': '2023-12-26',\n",
+       " 'Total_Views': 237164420,\n",
+       " 'Subscribers': 2330000,\n",
+       " 'Video_count': 5959}"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_stats(API_KEY, CHANNEL_ID)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Channels to analize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels_name = [\"Codecademy\", \"GitHub\", \"Amazon Web Services\", \"Microsoft Azure\"]\n",
+    "channels_ids = [\"UC5CMtpogD_P3mOoeiDHD5eQ\", \"UC7c3Kb6jYCRj4JOHHZTxKsQ\", \"UCd6MoB9NC6uYN2grvUNT-Zg\", \"UC0m-80FnNY2Qb7obvTL_2fA\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel_name</th>\n",
+       "      <th>Channel_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Codecademy</td>\n",
+       "      <td>UC5CMtpogD_P3mOoeiDHD5eQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GitHub</td>\n",
+       "      <td>UC7c3Kb6jYCRj4JOHHZTxKsQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amazon Web Services</td>\n",
+       "      <td>UCd6MoB9NC6uYN2grvUNT-Zg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Microsoft Azure</td>\n",
+       "      <td>UC0m-80FnNY2Qb7obvTL_2fA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Channel_name                Channel_id\n",
+       "0           Codecademy  UC5CMtpogD_P3mOoeiDHD5eQ\n",
+       "1               GitHub  UC7c3Kb6jYCRj4JOHHZTxKsQ\n",
+       "2  Amazon Web Services  UCd6MoB9NC6uYN2grvUNT-Zg\n",
+       "3      Microsoft Azure  UC0m-80FnNY2Qb7obvTL_2fA"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "channels = {\n",
+    "    \"Channel_name\": channels_name,\n",
+    "    \"Channel_id\": channels_ids\n",
+    "}\n",
+    "\n",
+    "df_channels = pd.DataFrame(channels)\n",
+    "\n",
+    "df_channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Created_at': '2023-12-26',\n",
+       " 'Total_Views': 14664952,\n",
+       " 'Subscribers': 340000,\n",
+       " 'Video_count': 1704}"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_stats(API_KEY, df_channels[\"Channel_id\"][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def channel_stats(df, api_key):\n",
+    "    \n",
+    "    date = []\n",
+    "    views = []\n",
+    "    suscriber= []\n",
+    "    video_count = []\n",
+    "    channel_name = []\n",
+    "    \n",
+    "    tiempo = [1, 2, 3, 4, 5]\n",
+    "    \n",
+    "    for i in tqdm(range(len(df)), colour = \"green\"):\n",
+    "        \n",
+    "        stats_temp = get_stats(API_KEY, df_channels[\"Channel_id\"][1])\n",
+    "        \n",
+    "        date.append(stats_temp[\"Created_at\"])\n",
+    "        views.append(stats_temp[\"Total_Views\"])\n",
+    "        suscriber.append(stats_temp[\"Subscribers\"])\n",
+    "        video_count.append(stats_temp[\"Video_count\"])\n",
+    "        channel_name.append(df[\"Channel_name\"][i])\n",
+    "    \n",
+    "        time.sleep(random.choice(tiempo))\n",
+    "        \n",
+    "    data = {\n",
+    "        \"Channel_name\": channel_name,\n",
+    "        \"Subscribers\": suscriber,\n",
+    "        \"Video_Count\": video_count,\n",
+    "        \"Total_Views\": views,\n",
+    "        \"created_at\": date\n",
+    "    }\n",
+    "    \n",
+    "    df_channels_final = pd.DataFrame(data)\n",
+    "    \n",
+    "    return df_channels_final\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel_name</th>\n",
+       "      <th>Channel_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Codecademy</td>\n",
+       "      <td>UC5CMtpogD_P3mOoeiDHD5eQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GitHub</td>\n",
+       "      <td>UC7c3Kb6jYCRj4JOHHZTxKsQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amazon Web Services</td>\n",
+       "      <td>UCd6MoB9NC6uYN2grvUNT-Zg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Microsoft Azure</td>\n",
+       "      <td>UC0m-80FnNY2Qb7obvTL_2fA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Channel_name                Channel_id\n",
+       "0           Codecademy  UC5CMtpogD_P3mOoeiDHD5eQ\n",
+       "1               GitHub  UC7c3Kb6jYCRj4JOHHZTxKsQ\n",
+       "2  Amazon Web Services  UCd6MoB9NC6uYN2grvUNT-Zg\n",
+       "3      Microsoft Azure  UC0m-80FnNY2Qb7obvTL_2fA"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|\u001b[32m██████████\u001b[0m| 4/4 [00:14<00:00,  3.58s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel_name</th>\n",
+       "      <th>Subscribers</th>\n",
+       "      <th>Video_Count</th>\n",
+       "      <th>Total_Views</th>\n",
+       "      <th>created_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Codecademy</td>\n",
+       "      <td>340000</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>14664952</td>\n",
+       "      <td>2023-12-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GitHub</td>\n",
+       "      <td>340000</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>14664952</td>\n",
+       "      <td>2023-12-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amazon Web Services</td>\n",
+       "      <td>340000</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>14664952</td>\n",
+       "      <td>2023-12-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Microsoft Azure</td>\n",
+       "      <td>340000</td>\n",
+       "      <td>1704</td>\n",
+       "      <td>14664952</td>\n",
+       "      <td>2023-12-26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Channel_name  Subscribers  Video_Count  Total_Views  created_at\n",
+       "0           Codecademy       340000         1704     14664952  2023-12-26\n",
+       "1               GitHub       340000         1704     14664952  2023-12-26\n",
+       "2  Amazon Web Services       340000         1704     14664952  2023-12-26\n",
+       "3      Microsoft Azure       340000         1704     14664952  2023-12-26"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "channel_stats(df_channels, API_KEY)"
    ]
   }
  ],
