--- a/Extract_daily_statistics_youtube/youtube_stats.ipynb
+++ b/Extract_daily_statistics_youtube/youtube_stats.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,19 +346,17 @@
     "    video_count = []\n",
     "    channel_name = []\n",
     "    \n",
-    "    tiempo = [1, 2, 3, 4, 5]\n",
     "    \n",
     "    for i in tqdm(range(len(df)), colour = \"green\"):\n",
     "        \n",
-    "        stats_temp = get_stats(API_KEY, df_channels[\"Channel_id\"][1])\n",
+    "        stats_temp = get_stats(API_KEY, df_channels[\"Channel_id\"][i])\n",
     "        \n",
     "        date.append(stats_temp[\"Created_at\"])\n",
     "        views.append(stats_temp[\"Total_Views\"])\n",
     "        suscriber.append(stats_temp[\"Subscribers\"])\n",
     "        video_count.append(stats_temp[\"Video_count\"])\n",
     "        channel_name.append(df[\"Channel_name\"][i])\n",
-    "    \n",
-    "        time.sleep(random.choice(tiempo))\n",
+    "\n",
     "        \n",
     "    data = {\n",
     "        \"Channel_name\": channel_name,\n",
@@ -376,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +435,7 @@
        "3      Microsoft Azure  UC0m-80FnNY2Qb7obvTL_2fA"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,14 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|\u001b[32m██████████\u001b[0m| 4/4 [00:14<00:00,  3.58s/it]\n"
+      "100%|\u001b[32m██████████\u001b[0m| 4/4 [00:01<00:00,  2.99it/s]\n"
      ]
     },
     {
@@ -490,9 +488,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Codecademy</td>\n",
-       "      <td>340000</td>\n",
-       "      <td>1704</td>\n",
-       "      <td>14664952</td>\n",
+       "      <td>289000</td>\n",
+       "      <td>270</td>\n",
+       "      <td>28797209</td>\n",
        "      <td>2023-12-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -506,17 +504,17 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Amazon Web Services</td>\n",
-       "      <td>340000</td>\n",
-       "      <td>1704</td>\n",
-       "      <td>14664952</td>\n",
+       "      <td>721000</td>\n",
+       "      <td>15929</td>\n",
+       "      <td>349568736</td>\n",
        "      <td>2023-12-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Microsoft Azure</td>\n",
-       "      <td>340000</td>\n",
-       "      <td>1704</td>\n",
-       "      <td>14664952</td>\n",
+       "      <td>303000</td>\n",
+       "      <td>1506</td>\n",
+       "      <td>24607763</td>\n",
        "      <td>2023-12-26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -525,13 +523,13 @@
       ],
       "text/plain": [
        "          Channel_name  Subscribers  Video_Count  Total_Views  created_at\n",
-       "0           Codecademy       340000         1704     14664952  2023-12-26\n",
+       "0           Codecademy       289000          270     28797209  2023-12-26\n",
        "1               GitHub       340000         1704     14664952  2023-12-26\n",
-       "2  Amazon Web Services       340000         1704     14664952  2023-12-26\n",
-       "3      Microsoft Azure       340000         1704     14664952  2023-12-26"
+       "2  Amazon Web Services       721000        15929    349568736  2023-12-26\n",
+       "3      Microsoft Azure       303000         1506     24607763  2023-12-26"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
