update project youtube stats

--- a/Extract_daily_statistics_youtube/youtube_stats.ipynb
+++ b/Extract_daily_statistics_youtube/youtube_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from googleapiclient.discovery import build"
+    "from googleapiclient.discovery import build\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,25 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'kind': 'youtube#channelListResponse',\n",
-       " 'etag': 'x4Z-dOlA6bO3MYaARoBz38N99Tc',\n",
+       " 'etag': 'Sdtleed1B5mWR0Kfmx2WkaTtRhs',\n",
        " 'pageInfo': {'totalResults': 1, 'resultsPerPage': 5},\n",
        " 'items': [{'kind': 'youtube#channel',\n",
-       "   'etag': '7a-YSAfoEqweLAhZla_NaRdRg-Q',\n",
+       "   'etag': 'Hp5W21TLpphYLYgSKGW6o59HNHw',\n",
        "   'id': 'UC_x5XG1OV2P6uZZ5FSM9Ttw',\n",
-       "   'statistics': {'viewCount': '237164420',\n",
+       "   'statistics': {'viewCount': '237179646',\n",
        "    'subscriberCount': '2330000',\n",
        "    'hiddenSubscriberCount': False,\n",
-       "    'videoCount': '5959'}}]}"
+       "    'videoCount': '5960'}}]}"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,19 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Created_at': '23-12-26',\n",
-       " 'Total_Views': 237164420,\n",
+       "{'Created_at': '23-12-27',\n",
+       " 'Total_Views': 237179646,\n",
        " 'Subscribers': 2330000,\n",
        " 'Video_count': 5959}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "2330000"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,19 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Created_at': '2023-12-26',\n",
-       " 'Total_Views': 237164420,\n",
+       "{'Created_at': '2023-12-27',\n",
+       " 'Total_Views': 237179646,\n",
        " 'Subscribers': 2330000,\n",
        " 'Video_count': 5959}"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "3      Microsoft Azure  UC0m-80FnNY2Qb7obvTL_2fA"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,19 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Created_at': '2023-12-26',\n",
-       " 'Total_Views': 14664952,\n",
+       "{'Created_at': '2023-12-27',\n",
+       " 'Total_Views': 14681711,\n",
        " 'Subscribers': 340000,\n",
-       " 'Video_count': 1704}"
+       " 'Video_count': 1705}"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "3      Microsoft Azure  UC0m-80FnNY2Qb7obvTL_2fA"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,16 +446,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|\u001b[32m██████████\u001b[0m| 4/4 [00:01<00:00,  2.99it/s]\n"
+      "100%|\u001b[32m██████████\u001b[0m| 4/4 [00:01<00:00,  2.82it/s]\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "channels_df = channel_stats(df_channels, API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -490,32 +500,32 @@
        "      <td>Codecademy</td>\n",
        "      <td>289000</td>\n",
        "      <td>270</td>\n",
-       "      <td>28797209</td>\n",
-       "      <td>2023-12-26</td>\n",
+       "      <td>28801439</td>\n",
+       "      <td>2023-12-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>GitHub</td>\n",
        "      <td>340000</td>\n",
-       "      <td>1704</td>\n",
-       "      <td>14664952</td>\n",
-       "      <td>2023-12-26</td>\n",
+       "      <td>1705</td>\n",
+       "      <td>14681711</td>\n",
+       "      <td>2023-12-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Amazon Web Services</td>\n",
-       "      <td>721000</td>\n",
-       "      <td>15929</td>\n",
-       "      <td>349568736</td>\n",
-       "      <td>2023-12-26</td>\n",
+       "      <td>722000</td>\n",
+       "      <td>15932</td>\n",
+       "      <td>349611877</td>\n",
+       "      <td>2023-12-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Microsoft Azure</td>\n",
        "      <td>303000</td>\n",
        "      <td>1506</td>\n",
-       "      <td>24607763</td>\n",
-       "      <td>2023-12-26</td>\n",
+       "      <td>24624056</td>\n",
+       "      <td>2023-12-27</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -523,19 +533,124 @@
       ],
       "text/plain": [
        "          Channel_name  Subscribers  Video_Count  Total_Views  created_at\n",
-       "0           Codecademy       289000          270     28797209  2023-12-26\n",
-       "1               GitHub       340000         1704     14664952  2023-12-26\n",
-       "2  Amazon Web Services       721000        15929    349568736  2023-12-26\n",
-       "3      Microsoft Azure       303000         1506     24607763  2023-12-26"
+       "0           Codecademy       289000          270     28801439  2023-12-27\n",
+       "1               GitHub       340000         1705     14681711  2023-12-27\n",
+       "2  Amazon Web Services       722000        15932    349611877  2023-12-27\n",
+       "3      Microsoft Azure       303000         1506     24624056  2023-12-27"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "channel_stats(df_channels, API_KEY)"
+    "channels_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels_df.to_csv(\"channels_to_analize.csv\", encoding='utf-8', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv(\"channels_to_analize.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel_name</th>\n",
+       "      <th>Subscribers</th>\n",
+       "      <th>Video_Count</th>\n",
+       "      <th>Total_Views</th>\n",
+       "      <th>created_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Codecademy</td>\n",
+       "      <td>289000</td>\n",
+       "      <td>270</td>\n",
+       "      <td>28801439</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GitHub</td>\n",
+       "      <td>340000</td>\n",
+       "      <td>1705</td>\n",
+       "      <td>14681711</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amazon Web Services</td>\n",
+       "      <td>722000</td>\n",
+       "      <td>15932</td>\n",
+       "      <td>349611877</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Microsoft Azure</td>\n",
+       "      <td>303000</td>\n",
+       "      <td>1506</td>\n",
+       "      <td>24624056</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Channel_name  Subscribers  Video_Count  Total_Views  created_at\n",
+       "0           Codecademy       289000          270     28801439  2023-12-27\n",
+       "1               GitHub       340000         1705     14681711  2023-12-27\n",
+       "2  Amazon Web Services       722000        15932    349611877  2023-12-27\n",
+       "3      Microsoft Azure       303000         1506     24624056  2023-12-27"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
    ]
   }
  ],
