--- a/Extract_daily_statistics_youtube/youtube_stats.ipynb
+++ b/Extract_daily_statistics_youtube/youtube_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,77 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from googleapiclient.discovery import build\n"
+    "### Requests Option 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = ConfigParser()\n",
+    "config.read('config.cfg')\n",
+    "\n",
+    "API_KEY = config['secrets']['api_key']\n",
+    "CHANNEL_ID = \"UC_x5XG1OV2P6uZZ5FSM9Ttw\"\n",
+    "\n",
+    "url_channel_stats = f'https://youtube.googleapis.com/youtube/v3/channels?part=statistics&id={CHANNEL_ID}&key={API_KEY}'\n",
+    "response_channels = requests.get(url_channel_stats)\n",
+    "channel_stats = json.loads(response_channels.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'kind': 'youtube#channelListResponse',\n",
+       " 'etag': 'mQT4CtRMgXvQHoHnDlq-GcQevR4',\n",
+       " 'pageInfo': {'totalResults': 1, 'resultsPerPage': 5},\n",
+       " 'items': [{'kind': 'youtube#channel',\n",
+       "   'etag': '970AOUV5s6o0rVo2fJF6UrvsGF4',\n",
+       "   'id': 'UC_x5XG1OV2P6uZZ5FSM9Ttw',\n",
+       "   'statistics': {'viewCount': '237195054',\n",
+       "    'subscriberCount': '2330000',\n",
+       "    'hiddenSubscriberCount': False,\n",
+       "    'videoCount': '5962'}}]}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "channel_stats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Requests Option 2 using googleapliclient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from googleapiclient.discovery import build"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,25 +135,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'kind': 'youtube#channelListResponse',\n",
-       " 'etag': 'Sdtleed1B5mWR0Kfmx2WkaTtRhs',\n",
+       " 'etag': 'mQT4CtRMgXvQHoHnDlq-GcQevR4',\n",
        " 'pageInfo': {'totalResults': 1, 'resultsPerPage': 5},\n",
        " 'items': [{'kind': 'youtube#channel',\n",
-       "   'etag': 'Hp5W21TLpphYLYgSKGW6o59HNHw',\n",
+       "   'etag': '970AOUV5s6o0rVo2fJF6UrvsGF4',\n",
        "   'id': 'UC_x5XG1OV2P6uZZ5FSM9Ttw',\n",
-       "   'statistics': {'viewCount': '237179646',\n",
+       "   'statistics': {'viewCount': '237195054',\n",
        "    'subscriberCount': '2330000',\n",
        "    'hiddenSubscriberCount': False,\n",
-       "    'videoCount': '5960'}}]}"
+       "    'videoCount': '5962'}}]}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
